exports[`Analysis > of a point > runs, giving reasonable results #0`] = `
<div aria-label="Opportunities within isochrone" class="css-1xlhhoc">
  85,635
</div>
`;

exports[`Analysis > of a point > runs, giving reasonable results #1`] = `
<div aria-label="Opportunities within isochrone" class="css-1xlhhoc">
  33,626
</div>
`;

exports[`Analysis > of a point > runs, giving reasonable results #2`] = `
<div aria-label="Opportunities within isochrone" class="css-1xlhhoc">3,082</div>
`;
